classroom/assets/css/main.css
/* ... */
.switcher__input:checked+.switcher__label {
    color: #fff;
}

.switcher__input:checked+.switcher__label {
    color: #fff;
}

.switcher__input--right:checked~.switcher__toggle {
    left: calc(100% - 99px);
}

.switcher__input--middle1:checked~.switcher__toggle {
    left: 99px;
}

.switcher__input--middle2:checked~.switcher__toggle {
    left: calc((95px * 2) + 4px);
}

.switcher__input--middle3:checked~.switcher__toggle {
    left: calc((95px * 3) + 4px);
}

.switcher__input--middle4:checked~.switcher__toggle {
    left: calc((95px * 4) + 4px);
}

.mnh-2-5 {
    min-height: 2.5em;
}

.w-fit-content {
    width: fit-content;
}


.fw7-primary {
    font-weight: 700;
    color: var(--classroom-primary);
}

.fw7-secondary {
    font-weight: 700;
    color: var(--classroom-secondary);
}

.fw7-uncolored {
    font-weight: 700;
}

.hint-one-page-course {
    text-align: center;
    border: 1px solid var(--classroom-secondary);
    border-radius: 50px;
    padding: 0.5em;
}

.one-page-course-activity-block {
    padding: 2em 3em;
    margin: 2em 0;
}

.simple-background {
    background: var(--classroom-background);
}

.tooltip {
    z-index: 30000;
}

.dropdown-menu.show {
    transform: translate(0px, 50px) !important;
}

.half-opacity {
    opacity: 0.5;
}

.full-opacity {
    opacity: 1;
}

th,
td {
    color: var(--classroom-text-0) !important;
}


.import-multiple-activities {
    width: 32px;
    border-radius: 3px;
    margin: 0 0.3em;
}

.top-left-return-btn {
    position: absolute;
    top: 0;
    left: 0;
    margin: 0.5em;
}

@media (max-width: 1280px) {
    .mobile-mt-2 {
        margin-top: 2em;
    }
}

.fs-large {
    font-size: large;
}

/* break point height > 870 */
.lti-iframe-height {
    min-height: 80vh;
}

@media (max-height: 1150px) {
    .lti-iframe-height {
        min-height: 78vh;
    }
}

@media (max-height: 950px) {
    .lti-iframe-height {
        min-height: 74vh;
    }
}

@media (max-height: 780px) {
    .lti-iframe-height {
        min-height: 70vh;
    }
}

@media (max-height: 600px) {
    .lti-iframe-height {
        min-height: 63vh;
    }
}

#my_calculator:focus,
#my_calculator:focus-within {
    border: 2px solid var(--classroom-primary) !important;
    outline: none;
    box-shadow: 0 0 0 0.2rem rgba(var(--classroom-primary-rgb), 0.25);
}

#word-search:hover {
  background-color: rgb(0 0 0 / 0.2);
}

#word-search:focus-visible {
  box-shadow: 0 0 0 0.2rem rgba(var(--classroom-primary-rgb), 0.25);
}

/* 
.draggable-mirror:not(.course-item-draggable) img {
    max-width: 100px !important;
    max-height: 100px !important;
    object-fit: contain !important;
}

.draggable-mirror:not(.course-item-draggable):has(img) {
    width: 100px !important;
    height: 100px !important;
    opacity: 0.8 !important;
    margin-left: 200px !important;
    margin-top: 200px !important;
}
 */

